Add navbar code to index.html, as well as style.css and reset.css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link href="reset.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
         <meta charset="UTF-8">
-        <title>Google Home Page</title>
+        <meta name="viewport" content="width=device-width, intial-scale=1.0">
+        <title>TOP Google Home Page</title>
     </head>
     <body>
-        <p>Hello World! My name is Steve</p>
+        <!--Top 'nav' bar-->
+    <ul id="navbar">
+        <li class="float-left"><a href="#" target="">About</a></li>
+        <li class="float-left"><a href="#" target="">Store</a></li>
+        <li class="float-right"><a class="btn" href="#" target="">Sign In</a></li>
+        <li class="float-right"><a href="#" target="">Icon</a></li>
+        <li class="float-right"><a href="#" target="">Images</a></li>
+        <li class="float-right"><a href="#" target="">Gmail</a></li>
+    </ul>
+<!--Img container for logo below-->
+        <div></div>
+            <p>google img container</p>
+        </div>
+        <div>
+            <p>search bar container and buttons</p>
+        </div>
+        
     </body>
 </html>
