--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <link href="style.css" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
-        <title>TOP Google Home Page</title>
+        <title>TOP Google Home Project</title>
     </head>
     <body>
-        <!--Top 'nav' bar-->
+<!--Top 'nav' bar-->
     <ul id="navbar">
         <li class="float-left"><a href="#" target="">About</a></li>
         <li class="float-left"><a href="#" target="">Store</a></li>
@@ -18,11 +18,12 @@
         <li class="float-right"><a href="#" target="">Gmail</a></li>
     </ul>
 <!--Img container for logo below-->
-        <div></div>
-            <p>google img container</p>
+        <div class="img-container">
+            <img id="main-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
         </div>
-        <div>
-            <p>search bar container and buttons</p>
+<!--Search text field-->
+        <div class="searchbox-container">
+            <input id="textfield" type="text">
         </div>
         
     </body>
