Fix searchbar width, add magnifying glass icon to searchbar

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <title>TOP Google Home Project</title>
     </head>
-    
 <body>
-
 <!--Top 'nav' bar-->
 <nav id="navbar">
     <ul class="nav left">
@@ -30,6 +28,9 @@
     </div>
 <!--Search text field-->
     <div class="searchbox-container">
+    <!--search icon-->
+        <img class="search-icon" src="https://www.pinclipart.com/picdir/big/15-157992_lens-clipart-magnifier-magnifying-glass-icon-grey-png.png" alt="search icon">
+    <!--text field for search bar-->
         <input id="textfield" type="text">
     </div>
     <div id="btn-container"> 
