Clean up code for optimisation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
 <!--Img container for logo below-->
     <div class="img-container">
+    <a href="#">
         <img id="main-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
+    </a>
     </div>
 <!--Search text field-->
     <div class="searchbox-container">
@@ -33,6 +35,7 @@
     <!--text field for search bar-->
         <input id="textfield" type="text">
     </div>
+    <!--search buttons-->
     <div id="btn-container"> 
         <input class="search-btn" type="submit" value="Google Search">
         <input class="search-btn" type="submit" value="I'm Feeling Lucky">
@@ -40,17 +43,6 @@
     <a class="trend-link" href=""><p style="text-align:center">See the top search trends of 2020</p></a> 
 <!--Footer section-->                  
     <footer id="footer">
-        <!--
-        <ul id="footer" class="">
-            <li class="footer-links float-left">Advertising</li>
-            <li class="footer-links float-left">Business</li>
-            <li class="footer-links float-left">How Search works</li>
-            <li class="footer-links float-center">Carbon neutral since 2007</li>
-            <li class="footer-links float-right">Privacy</li>
-            <li class="footer-links float-right">Terms</li>
-            <li class="footer-links float-right">Settings</li>
-        </ul>
-    -->
 <!--footer left column-->
     <div class="footer-container left">
         <ul class="footer-links">
@@ -59,7 +51,6 @@
             <li><a class="footer-links" href="#">How Search works</a></li>
         </ul>
     </div>
-<!--center column-->
 <!--footer right column-->
     <div class="footer-container right">
         <ul class="footer-links">
